# version

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  versionMain.cpp
win32/vs2008/: version.vcproj
win32/vs2010/: version.vcxproj  version.vcxproj.filters
win32/vs2012/: version.vcxproj  version.vcxproj.filters
